replace placeholder text

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
 		<!-- Always force latest IE rendering engine or request Chrome Frame -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Blue One Page HTML Template</title>
+        <title>Toki LLC</title>
 		<!-- Meta Description -->
         <meta name="description" content="Toki LLC">
         <meta name="keywords" content="Toki LLC">
@@ -108,7 +108,7 @@
 						<div class="slide-caption">
                             <div class="caption-content">
                                 <h2 class="animated fadeInDown">TOKI LLC</h2>
-                                <span class="animated fadeInDown">Providing High Quality Product and Services</span>
+                                <span class="animated fadeInDown">Providing High Quality Products and Services</span>
                             </div>
                         </div>
 
